--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -78,6 +78,11 @@ storage:
     region: cn-north-1
     bucket: sigma
     forcePathStyle: true
+  cos:
+    ak: xxxx
+    sk: xxxx
+    endpoint: https://xxxxxxx
+
 # Notice: the tag never update after the first pulled from remote registry, unless you delete the image and pull again.
 proxy:
   enabled: false
