--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.9",
     "axios": "^1.4.0",
+    "bytemd": "^1.5.0",
     "dayjs": "^1.11.9",
     "flowbite": "^1.8.1",
     "github-markdown-css": "^5.2.0",
@@ -26,20 +27,20 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "react-router-dom": "^6.14.2",
+    "react-router-dom": "^6.15.0",
     "react-toastify": "^9.1.3",
+    "react-helmet-async": "^1.3.0",
     "react-use": "^17.4.0"
   },
   "devDependencies": {
-    "@types/node": "^20.4.8",
-    "@types/react": "^18.2.18",
+    "@types/node": "^20.4.10",
+    "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "autoprefixer": "^10.4.14",
     "cssnano": "^6.0.1",
     "json-server": "^0.17.3",
     "postcss": "^8.4.27",
-    "react-helmet-async": "^1.3.0",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6",
     "vite": "^4.4.9"
