:recycle: Reimplement cos some of the logic

--- a/conf/config-full.yaml
+++ b/conf/config-full.yaml
@@ -1,4 +1,4 @@
-# this is a full config file, just show all avaliable config items.
+# this is a full config file, just show all available config items.
 
 log:
   level: debug
