--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@bytemd/react": "^1.21.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@monaco-editor/react": "^4.5.2",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.6",
     "@tailwindcss/line-clamp": "^0.4.4",
@@ -24,6 +25,7 @@
     "github-markdown-css": "^5.2.0",
     "human-format": "^1.2.0",
     "lodash": "^4.17.21",
+    "monaco-editor": "^0.41.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
@@ -33,7 +35,7 @@
     "react-use": "^17.4.0"
   },
   "devDependencies": {
-    "@types/node": "^20.5.7",
+    "@types/node": "^20.5.9",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react-swc": "^3.3.2",
