--- a/conf/config-dev.yaml
+++ b/conf/config-dev.yaml
@@ -3,6 +3,7 @@
 log:
   level: debug
   proxyLevel: info
+
 database:
   # The database type to use. Supported types are: sqlite3, mysql, postgresql
   type: mysql
@@ -32,15 +33,26 @@ redis:
   url: redis://:sigma@localhost:6379/0
 
 cache:
-  # the cache type available is: redis
-  type: redis
+  # the cache type available is: redis, inmemory, database
+  type: database
   # please attention in multi
-  inmemory: {}
-  redis: {}
+  inmemory:
+    size: 10240
+  redis:
+    ttl: 72h
+  database:
+    size: 10240
+    threshold: 0.2
 
 workqueue:
-  # the workqueue type available: redis
-  type: redis
+  # the workqueue type available: redis, kafka, database
+  type: database
+  redis: {}
+
+locker:
+  # the locker type available: redis, database
+  type: database
+  database: {}
   redis: {}
 
 namespace:
