--- a/web/package.json
+++ b/web/package.json
@@ -32,7 +32,10 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.15.0",
     "react-toastify": "^9.1.3",
-    "react-use": "^17.4.0"
+    "react-use": "^17.4.0",
+    "xterm": "^5.3.0",
+    "xterm-addon-attach": "^0.9.0",
+    "xterm-addon-fit": "^0.8.0"
   },
   "devDependencies": {
     "@types/node": "^20.5.9",
