:sparkles: Remove redis

--- a/conf/config-dev.yaml
+++ b/conf/config-dev.yaml
@@ -28,8 +28,8 @@ database:
 deploy: single
 
 redis:
-  # redis type available: internal, external
-  type: internal
+  # redis type available: none, external
+  type: none
   url: redis://:sigma@localhost:6379/0
 
 cache:
