--- a/conf/config-full.yaml
+++ b/conf/config-full.yaml
@@ -124,7 +124,7 @@ auth:
     password: internal-sigma
   admin:
     username: sigma
-    password: sigma
+    password: Admin@123
   token:
     realm: ""
     service: ""
