--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -66,8 +66,8 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           provenance: false
           sbom: false
-          cache-from: type=registry,ref=ghcr.io/${{ github.repository }}:build-cache-alpine
-          cache-to: type=registry,ref=ghcr.io/${{ github.repository }}:build-cache-alpine,mode=max
+          # cache-from: type=registry,ref=ghcr.io/${{ github.repository }}:build-cache-alpine
+          # cache-to: type=registry,ref=ghcr.io/${{ github.repository }}:build-cache-alpine,mode=max
   image-build-debian:
     name: image-build-debian
     runs-on: ubuntu-22.04
@@ -120,8 +120,8 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           provenance: false
           sbom: false
-          cache-from: type=registry,ref=ghcr.io/${{ github.repository }}:build-cache-debian
-          cache-to: type=registry,ref=ghcr.io/${{ github.repository }}:build-cache-debian,mode=max
+          # cache-from: type=registry,ref=ghcr.io/${{ github.repository }}:build-cache-debian
+          # cache-to: type=registry,ref=ghcr.io/${{ github.repository }}:build-cache-debian,mode=max
   image-build-builder:
     name: image-build-builder
     runs-on: ubuntu-22.04
