--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -37,6 +37,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
       - name: Login to Docker Hub
         uses: docker/login-action@v2
+        if: ${{ github.event_name != 'pull_request' }}
         with:
           registry: ghcr.io
           username: tosone
@@ -91,6 +92,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
       - name: Login to Docker Hub
         uses: docker/login-action@v2
+        if: ${{ github.event_name != 'pull_request' }}
         with:
           registry: ghcr.io
           username: tosone
@@ -145,6 +147,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
       - name: Login to Docker Hub
         uses: docker/login-action@v2
+        if: ${{ github.event_name != 'pull_request' }}
         with:
           registry: ghcr.io
           username: tosone
