--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/typography": "^0.5.10",
     "axios": "^1.6.1",
     "bytemd": "^1.21.0",
+    "cron-parser": "^4.9.0",
     "dayjs": "^1.11.10",
     "flowbite": "^2.0.0",
     "github-markdown-css": "^5.4.0",
