--- a/web/package.json
+++ b/web/package.json
@@ -15,14 +15,15 @@
     "@heroicons/react": "^2.0.18",
     "@monaco-editor/react": "^4.6.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/forms": "^0.5.6",
+    "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.10",
     "axios": "^1.6.1",
     "bytemd": "^1.21.0",
     "cron-parser": "^4.9.0",
+    "csstype": "^3.0.10",
     "dayjs": "^1.11.10",
-    "flowbite": "^2.0.0",
+    "flowbite": "^2.1.1",
     "github-markdown-css": "^5.4.0",
     "human-format": "^1.2.0",
     "lodash": "^4.17.21",
